<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_liked_properties_yet">No liked properties yet</string>
    <string name="image">image</string>
    <string name="property_title">Property Title</string>
    <string name="short_description_about_the_property">Short description about the property…e.g A very nice villa located at the outskirts of town</string>
    <string name="_120k">120K</string>
    <string name="_340">340</string>
    <string name="share">Share</string>
    <string name="_60">60</string>
    <string name="_600">600</string>
    <string name="likeButton">like</string>
    <string name="comment">comment</string>
    <string name="enter_comment">Enter comment</string>
    <string name="no_properties_available">No properties available</string>
    <string name="commentButton">comment</string>
    <string name="shareButton">share</string>
    <string name="send_comment">send_comment</string>
    <string name="sample_comment_text">Sample Comment Text</string>
    <string name="just_now">Just now</string>
    <string name="no_comments_tip">Be the first to comment</string>
    <string name="username">Username</string>
    <string name="pending_timestamp">pending</string>
    <string name="unknown_user">Unknown User</string>
    <string name="profile_picture">profile_picture</string>
    <string name="error_fetching_properties">Error fetching properties %1$s</string>
</resources>