<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/commentProfileImage"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/ic_profile"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_avatar_circle"
        android:layout_marginEnd="8dp"/>



    <!-- Comment Text and Timestamp -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Username TextView -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/commentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/username"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            android:text="@string/sample_comment_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/commentTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnPrimary"
            android:textSize="12sp"
            android:text="@string/just_now"/>
    </LinearLayout>
</LinearLayout>
