    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent">

        <!-- Media Container: Video or Image -->
        <FrameLayout
            android:id="@+id/mediaContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardView">

            <!-- ExoPlayer View for Video Content -->
            <androidx.media3.ui.PlayerView
                android:id="@+id/propertyVideoPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:resize_mode="fill"
                android:visibility="gone" /> <!-- Set visibility programmatically -->

            <!-- Image View for Static Content -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/propertyImagePager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop" />
        </FrameLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardView"
                app:cardElevation="4dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <!-- Title and Description Overlay -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            <!-- Dot Indicator goes here -->
            <LinearLayout
                android:id="@+id/dotIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/propertyTitle"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="@color/colorOnPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/property_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dotIndicator"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnPrimary"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/short_description_about_the_property"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/propertyTitle"/>


                    <!-- Like Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/likeButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:iconSize="25dp"
                        app:iconGravity="top"
                        android:layout_marginStart="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:icon="@drawable/ic_like"
                        android:contentDescription="@string/likeButton"
                        app:iconTint="@color/colorOnPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>

                    <!-- Like Count Text -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/likeCountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_120k"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@id/likeButton"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>

                    <!-- Comment Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/commentButton"
                        android:layout_width="48dp"
                        app:iconSize="25dp"
                        app:iconGravity="top"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:icon="@drawable/ic_comment2"
                        android:contentDescription="@string/comment"
                        app:iconTint="@color/colorOnPrimary"
                        app:layout_constraintStart_toEndOf="@id/likeCountText"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>

                    <!-- Comment Count Text -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/commentCountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_340"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@id/commentButton"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>

                    <!-- Share Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/shareButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:iconSize="25dp"
                        android:layout_marginLeft="20dp"
                        app:iconGravity="top"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:icon="@drawable/ic_share"
                        android:contentDescription="@string/shareButton"
                        android:scaleType="centerInside"
                        app:iconTint="@color/colorOnPrimary"
                        app:layout_constraintStart_toEndOf="@id/commentButton"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>

                    <!-- Share Count Text -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/shareCountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/_600"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@id/shareButton"
                        app:layout_constraintTop_toBottomOf="@id/contentDescription"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
